--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "start": "node server"
+    "start": "node server",
+    "start-mock-backend": "json-server --watch ./server/db/db.json --port 3004"
   },
   "dependencies": {
     "json-server": "^0.17.0"
